Group menus and backend fixes